@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Model as ModelPackage <<Rectangle>> {
  Class "<<interface>>\nReadOnlyAddressBook" as ReadOnlyAddressBook
  Class "<<interface>>\nReadOnlyUserPrefs" as ReadOnlyUserPrefs
  Class "<<interface>>\nModel" as Model
  Class AddressBook
  Class ModelManager
  Class UserPrefs

  Class UniquePersonList
  Class EmployeeId
  Class Person
  Class JobPosition
  Class Email
  Class Name
  Class Phone
  Class Tag

  ' Reminder-related classes in model
  package "reminder" {
    class Reminder {
      - Person person
      - LocalDate date
      - AnniversaryType type
      - String description
    }
    class Anniversary
    class AnniversaryType
  }
}

Class HiddenOutside #FFFFFF
HiddenOutside ..> Model

AddressBook .up.|> ReadOnlyAddressBook
UserPrefs .up.|> ReadOnlyUserPrefs
ModelManager .up.|> Model

Model .right.> ReadOnlyUserPrefs
Model .left.> ReadOnlyAddressBook

ModelManager -left-> "1" AddressBook
ModelManager -right-> "1" UserPrefs

AddressBook *--> "1" UniquePersonList
UniquePersonList --> "~* all" Person

Person *--> Name
Person *--> Phone
Person *--> Email
Person *--> JobPosition
Person *--> EmployeeId
Person *--> "*" Tag

ModelManager --> "~* filtered" Person

' === Reminder-related associations ===
Reminder --> Person : person
Reminder --> Anniversary : from
Anniversary --> AnniversaryType : type
ModelManager --> Reminder : reminderList

' === Hidden layout alignments ===
Person -[hidden]up-> UniquePersonList
Name -[hidden]right-> Phone
Phone -[hidden]right-> JobPosition
JobPosition -[hidden]right-> Email

@enduml
